# mlops_repo

./: .pre-commit-config.yaml  pyproject.toml
